# fits

./: .clang-tidy  .cmake-format.yaml  .travis.yml  CMakeLists.txt  conanfile.txt  readme.md
catch2/: CMakeLists.txt
cmake/: clang-tidy.cmake  compiler.cmake
design/: class_diagram.uml  readme.md  requirements.md
fits/: CMakeLists.txt  errors.cpp  errors.h  header.cpp  header.h  header_block.cpp  header_block.h
fits/fits/: errors.cpp  header_block.cpp  header_block.h
unit_tests/: CMakeLists.txt  errors_test.cpp  fits_testing.cpp  fits_testing.h  header_datum_test.cpp  header_entry_test.cpp  keyword_record_test.cpp
